--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-ags (3~git) UNRELEASED; urgency=low
+ags (3.5.0.10) UNRELEASED; urgency=low
 
-  * some release
+  * Release 3.5.0.10
 
- -- Tobias Hansen <tobias.han@gmx.de>  Mon, 18 Feb 2013 22:13:14 +0100
+ -- Gregor Riepl <onitake@gmail.com>  Sun, 05 May 2019 21:15:00 +0200
